non-msrv-tests/tests/ui/union.stderr
error: traits other then `Clone` and `Copy` aren't supported by unions
  --> tests/ui/union.rs:6:1
   |
6  | / #[derive_where(Debug)]
7  | | union UnsupportedTrait<T> {
8  | |     a: u8,
9  | |     b: PhantomData<T>,
10 | | }
   | |_^
